err/python-rest.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argproc'...
Listing './lib/python3.5/site-packages/argproc/test'...
Listing './lib/python3.5/site-packages/argproc-1.4.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/python_rest-1.3.egg-info'...
Listing './lib/python3.5/site-packages/rest'...
Compiling './lib/python3.5/site-packages/rest/application.py'...
***   File "./lib/python3.5/site-packages/rest/application.py", line 197
    except Error, e:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rest/entity'...
Compiling './lib/python3.5/site-packages/rest/entity/hint.py'...
***   File "./lib/python3.5/site-packages/rest/entity/hint.py", line 28
    raise ValueError, 'Illegal entity hint.'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/entity/json.py'...
***   File "./lib/python3.5/site-packages/rest/entity/json.py", line 27
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/entity/xml.py'...
***   File "./lib/python3.5/site-packages/rest/entity/xml.py", line 69
    except ExpatError, err:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/entity/yaml.py'...
***   File "./lib/python3.5/site-packages/rest/entity/yaml.py", line 35
    except YAMLError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/http.py'...
***   File "./lib/python3.5/site-packages/rest/http.py", line 101
    raise ValueError, 'Could not parse HTTP header.'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/msiis.py'...
***   File "./lib/python3.5/site-packages/rest/msiis.py", line 68
    print 'ISAPI handler created.'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rest/protocol.py'...
***   File "./lib/python3.5/site-packages/rest/protocol.py", line 58
    raise HTTPReturn, http.NOT_FOUND
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rest/server.py'...
***   File "./lib/python3.5/site-packages/rest/server.py", line 92
    print 'Listening on %s:%s' % (address, port)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rest/test'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
